# website

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci-merge-main.yml
api/: .gitignore  Cargo.toml
api/.sqlx/: query-14e1bb8d09d42ea30606c37970a8dcb5ac1699d30b07cb47a37b1e49ec72d7ee.json  query-836a8e266e702ca880f7a2a3cfebbc8e28e506b89227365da294e9e44b805481.json  query-bbda1925a458b8011feec9a5d196adbc696ecd8e0b0badedd613f986e9fdd06a.json  query-bf489d419f63930ab959b90be607d1f58a2f65323b99c44c45cb13176f02bf37.json  query-db7d020c35b10be634ac8e88e94087ce8e98d91280505eb212ce5005b5893b64.json
api/src/: admin.rs  reader.rs
api/src/auth/: jwt.rs  jwt_data.rs  mod.rs
api/src/client/: mod.rs
api/src/client/account/: mod.rs  postgresql_db.rs
api/src/client/account/crypto/: argon2id.rs  mod.rs
api/src/client/page/: memory_db.rs  mod.rs  postgresql_db.rs
api/src/route/: login.rs  mod.rs  page.rs
db/seed/: 20250131200414-create_page_table.sql  20250131232558-create_user_table.sql
nginx/: nginx.conf  web.nginx.conf
schema/: account.json  hello-world.json  login-response.json  login.json  page.json
scripts/: schema.mjs
web/: .gitignore  .stylelintrc.mjs  declarations-react.d.ts  declarations.d.ts  eslint.config.mjs  jest.config.ts  package-lock.json  package.json  tsconfig.json
web/.storybook/: main.ts  preview.ts  preview.tsx
web/resource/: index.html
web/scripts/: build.ts
web/src/app/: admin.tsx  reader.tsx
web/src/client/: index.ts
web/src/controller/: example.test.ts  (+1 more)
(+108 files in other folders)
