[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reader"
path = "src/reader.rs"


[[bin]]
name = "admin"
path = "src/admin.rs"

[dependencies.actix-web]
version = "4.9"

[dependencies.async-trait]
version = "0.1"

[dependencies.env_logger]
version = "0.11"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies.tokio]
version = "1.43"
features = [
    "macros",
    "rt",
]
