[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reader"
path = "src/reader.rs"

[[bin]]
name = "admin"
path = "src/admin.rs"

[dependencies]
actix-web = "4.9"
argon2 = "0.5"
async-trait = "0.1"
chrono = "0.4"
env_logger = "0.11"
jsonwebtoken = "9.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
tokio = { version = "1.43", features = ["macros", "rt"] }
